--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==1.1.1
-imutils==0.5.3
-Keras==2.4.0
-opencv-python==4.4.0.46
+numpy==1.23.4
+Flask==2.2.2
+imutils==0.5.4
+Keras==2.10.0
+opencv-python==4.6.0.66
 Pillow==8.0.1
-tensorflow==2.3.1
-scikit-image==0.17.2
+scikit-image==0.19.3
+gunicorn==20.0.4
